--- a/index.html
+++ b/index.html
@@ -390,7 +390,8 @@ representation of learning2014 data</a></li>
 <li><a href="#question-3-correlations" id="toc-question-3-correlations">Question 3: Correlations</a></li>
 <li><a href="#remaining-questions" id="toc-remaining-questions">Remaining questions</a></li>
 </ul></li>
-<li><a href="#analysis" id="toc-analysis">Analysis</a></li>
+<li><a href="#chapter-3-analysis" id="toc-chapter-3-analysis">Chapter 3:
+Analysis</a></li>
 </ul>
 </div>
 
@@ -406,7 +407,7 @@ use R Markdown syntax.</em></p>
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Tue Nov 22 14:13:42 2022&quot;</code></pre>
+<pre><code>## [1] &quot;Tue Nov 22 14:25:28 2022&quot;</code></pre>
 <p>The text continues here.</p>
 <p>[1] “Mon Nov 7 19:00:51 2022”</p>
 <p>TESTING - is this where I should write? <em>Questions:</em> <em>How
@@ -446,7 +447,7 @@ writing and reading R code as well as statistical methods.</li>
 advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Tue Nov 22 14:13:42 2022&quot;</code></pre>
+<pre><code>## [1] &quot;Tue Nov 22 14:25:28 2022&quot;</code></pre>
 </div>
 <div id="question-1-reading-the-data" class="section level1">
 <h1>Question 1: Reading the data</h1>
@@ -548,8 +549,8 @@ managed to get!</p>
 <hr />
 </div>
 </div>
-<div id="analysis" class="section level1">
-<h1>Analysis</h1>
+<div id="chapter-3-analysis" class="section level1">
+<h1>Chapter 3: Analysis</h1>
 <p>First, I will load a data package, provided by Kimmo Vehkalahti for
 assignment 3. See the R code below.</p>
 <div id="r-code" class="section level3">
